Что-то изменилось, а что не помню :-)
Очень похоже, что я переработал всю админку. (обновление от 03.10.2015
16:31)

--- a/packages/feedback/tmpl/admin/list_page_frame.html
+++ b/packages/feedback/tmpl/admin/list_page_frame.html
@@ -6,5 +6,5 @@
     <dt>Текущая страница</dt> <dd>[page]</dd>
     <dt>Всего страниц</dt> <dd>[pages_count]<dd>
         </dl>
-Открыть страницу № <input type="text" onkeyup="$('#pager_link').attr('href','[base]/'+$(this).val());"> <a href="#" id="pager_link" class="btn btn-default">перейти</a>
+Открыть страницу № <input type="text" onkeyup="$('#pager_link').attr('href','%index%/[base]/'+$(this).val());"> <a href="#" id="pager_link" class="btn btn-default">перейти</a>
 </div>
