--- a/packages/feedback/tmpl/feedback_must_have_message.html
+++ b/packages/feedback/tmpl/feedback_must_have_message.html
@@ -1,3 +1,1 @@
-<div class="alert alert-warning">
-    Сообщение не принято: не заполнено обязательное поле "[title]".
-</div>
+Сообщение не принято: не заполнено обязательное поле "[title]".<br/>
