--- a/packages/google_recaptcha/admin_forms.html
+++ b/packages/google_recaptcha/admin_forms.html
@@ -1,16 +1,23 @@
 <h3>Настройка ключей</h3>
 <form method="POST">
 <input type="hidden" name="google_recaptcha_admin_secret" value="1"/>
-Ключ:
-<input type="text" name="siteKey" value="[siteKey]"/><br/>
-Секретный ключ:
-<input type="text" name="secret" value="[secret]"/><br/>
-<input type="submit" value="Применить"/>
+<div class="input-group">
+    <span class="input-group-addon">Ключ</span>
+    <input type="text" name="siteKey" value="[siteKey]" class="form-control"/>
+</div><br/>
+
+<div class="input-group">
+    <span class="input-group-addon">Секретный ключ</span>
+<input type="text" name="secret" value="[secret]" class="form-control"/>
+</div><br/>
+
+<input type="submit" value="Применить" class="btn btn-success form-control"/>
+
 </form>
 <h3>Демонстрация</h3>
 <form method="POST">
 <input type="hidden" name="google_recaptcha_admin_demo_secret" value="1"/>
 [demo]
-<input type="submit" value="Я робот ?"/>
+<input type="submit" value="Я робот ?" class="btn btn-default form-control"/>
 
 </form>
